kubernetes/apps/services/convex/app/httproute-envoy.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: convex-actions-envoy
spec:
  parentRefs:
  - name: envoy-internal
    namespace: network
    sectionName: https
  hostnames:
  - "convex-actions.${HOME_DOMAIN}"
  rules:
  -
    backendRefs:
    - name: convex-backend
      port: 3211
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: convex-api-envoy
spec:
  parentRefs:
  - name: envoy-internal
    namespace: network
    sectionName: https
  hostnames:
  - "convex-api.${HOME_DOMAIN}"
  rules:
  -
    backendRefs:
    - name: convex-backend
      port: 3210
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: convex-dashboard-envoy
  annotations:
    homepage.shamubernetes.com/enabled: "true"
    homepage.shamubernetes.com/name: "Convex"
    homepage.shamubernetes.com/description: "Manage application data and functions"
    homepage.shamubernetes.com/group: "Tools"
    homepage.shamubernetes.com/order: "80"
    homepage.shamubernetes.com/favorite: "false"
    homepage.shamubernetes.com/icon: "dashboard-icons:convex"
spec:
  parentRefs:
  - name: envoy-internal
    namespace: network
    sectionName: https
  hostnames:
  - "convex.${HOME_DOMAIN}"
  rules:
  -
    backendRefs:
    - name: convex-dashboard
      port: 6791
